feat: rename BeeAIPlatform to AgentStack (#1256)
Signed-off-by: Lukáš Janeček <xjacka@gmail.com>
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>
Co-authored-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/community/community-calls/16-09-2025.md
+++ b/docs/community/community-calls/16-09-2025.md
@@ -6,7 +6,7 @@
 
 ## 🛠️ Improvements
 
-- Add `BeeAIPlatformChatModel` to dynamically pick the model from the platform.
+- Add `AgentStackChatModel` to dynamically pick the model from the platform.
 - Simplify event callback registration and deregistration (#849).
 - Expose an agent as an MCP server (#1086).
 - Support platform extensions in BeeAIPlatformAgent (client) (#1091).
