--- a/docs/integrations/acp.mdx
+++ b/docs/integrations/acp.mdx
@@ -9,18 +9,18 @@ icon: "server"
 
 ### Agent prerequisites
 
-- **[BeeAI platform](https://beeai.dev/)** installed and running locally
+- **[Agent Stack](https://beeai.dev/)** installed and running locally
 - **BeeAI Framework** installed with `pip install beeai-framework`
 - **BeeAI Framework extension for ACP** installed with `pip install 'beeai-framework[acp]'`
 
 
 ### ACP Agent
 
-When to use ACP instead of [BeeAI Platform Integration](./beeai-platform.mdx)?
+When to use ACP instead of [Agent Stack Integration](./agent-stack.mdx)?
 
 - You're connecting to your own custom ACP server
 - You're developing a multi-agent system where agents communicate via ACP
-- You're integrating with a third-party ACP-compliant service that isn't the BeeAI Platform
+- You're integrating with a third-party ACP-compliant service that isn't the Agent Stack
 
 <CodeGroup>
 
