--- a/docs/introduction/tour.mdx
+++ b/docs/introduction/tour.mdx
@@ -36,7 +36,7 @@ Here’s a quick map of the stages and modules:
   </Card>
 
   <Card title="Integration" icon="server" href="#integration">
-    Expose agents as services (MCP, BeeAI Platform, A2A, IBM wxO)
+    Expose agents as services (MCP, Agent Stack, A2A, IBM wxO)
   </Card>
 </CardGroup>
 
@@ -1014,20 +1014,20 @@ COMING SOON
 
 </CodeGroup>
 
-### BeeAI Platform
+### Agent Stack
 
-Expose your agent as a **BeeAI Platform server**:
+Expose your agent as a **Agent Stack server**:
 
 <Tip>
 Make sure you have done the following:
 
-pip install `'beeai-framework[a2a]' 'beeai-framework[beeai-platform]'`  and you have a compatible version of `uvicorn` installed.
+pip install `'beeai-framework[a2a]' 'beeai-framework[agentstack]'`  and you have a compatible version of `uvicorn` installed.
 </Tip>
 
 <CodeGroup>
 
 ```py Python
-from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformServer
+from beeai_framework.adapters.agentstack.serve.server import AgentStackServer
 from beeai_framework.agents.requirement import RequirementAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.memory import UnconstrainedMemory
@@ -1045,8 +1045,8 @@ def main():
         instructions="You are a helpful research assistant with access to Wikipedia and weather data."
     )
 
-    # Runs HTTP server that registers to BeeAI platform
-    server = BeeAIPlatformServer(config={"configure_telemetry": False})
+    # Runs HTTP server that registers to Agent Stack
+    server = AgentStackServer(config={"configure_telemetry": False})
     server.register(agent)
     server.serve()
 
