--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -18,9 +18,9 @@ The following table lists the currently supported providers:
 
 | Name                                                  | Dependency                                   | Location                    |
 |:-----------------------------------------------------|:--------------------------------------------|:---------------------------|
-| [A2A](https://a2a-protocol.org/)       | `beeai_framework.adapters.a2a.serve`         | `beeai-platform[a2a]`       |
-| [BeeAI Platform](https://beeai.dev/)                | `beeai_framework.adapters.beeai_platform.serve` | `beeai-platform[beeai-platform]` |
-| [MCP](https://modelcontextprotocol.io/) | `beeai_framework.adapters.mcp.serve`         | `beeai-platform[mcp]`       |
+| [A2A](https://a2a-protocol.org/)       | `beeai_framework.adapters.a2a.serve`         | `beeai-framework[a2a]`       |
+| [Agent Stack](https://beeai.dev/)                | `beeai_framework.adapters.agentstack.serve` | `beeai-framework[agentstack]` |
+| [MCP](https://modelcontextprotocol.io/) | `beeai_framework.adapters.mcp.serve`         | `beeai-framework[mcp]`       |
 
 <Note>
 For more details, see the [Integrations page](/integrations).
