docs: menu updates
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/modules/middleware.mdx
+++ b/docs/modules/middleware.mdx
@@ -130,7 +130,7 @@ In simpler terms, when you call one runnable (e.g., `ChatModel`) from within ano
 <Tip>The current execution context can be retrieved anytime by calling `RunContext.get()`.</Tip>
 
 
-## Runnable
+### Runnable
 
 The `Runnable[R]` class was created to unify common objects that can be executed and observed. It is an abstract class with the following traits:
 
