docs: update serve module and all integrations
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -9,18 +9,19 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 	Supported in Python only.
 </Note>
 
+
 ---
 
-### Prerequisites
+
+## Prerequisites
 
 - **BeeAI Framework** installed with `pip install beeai-framework`
 - **BeeAI Framework extension for A2A** installed with `pip install 'beeai-framework[a2a]'`
 
 
-### A2A Agent (Client)
+<Heading level={2} id="client">A2A Client</Heading>
 
-`A2AAgent` lets you easily connect with external agents using the A2A protocol.
-
+The `A2AAgent` lets you easily connect with external agents using the A2A protocol.
 
 <CodeGroup>
 
@@ -98,7 +99,7 @@ The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open stan
 
 </CodeGroup>
 
-### A2A Server
+<Heading level={2} id="server">A2A Server</Heading>
 
 `A2AServer` lets you expose agents built in the BeeAI framework via A2A protocol.
 
