--- a/docs/integrations/watsonx-orchestrate.mdx
+++ b/docs/integrations/watsonx-orchestrate.mdx
@@ -23,7 +23,7 @@ Before integrating IBM watsonx Orchestrate with the BeeAI Framework, ensure you 
 
 ---
 
-## Consuming agent from IBM watsonx Orchestrate (Client)
+<Heading level={2} id="client">Consuming from IBM watsonx Orchestrate (client)</Heading>
 
 The `WatsonxOrchestrateAgent` class enables you to connect to any native agent hosted on IBM watsonx Orchestrate. This allows your BeeAI-powered applications to interact with IBM watsonx Orchestrate agents programmatically.
 
@@ -77,7 +77,7 @@ The `WatsonxOrchestrateAgent` class enables you to connect to any native agent h
 
 ---
 
-## Consuming BeeAI Agents in IBM watsonx Orchestrate (Server)
+<Heading level={2} id="server">Exposing to IBM watsonx Orchestrate (server)</Heading>
 
 The `WatsonxOrchestrateServer` allows you to expose BeeAI agents as HTTP server with a chat completion endpoint compatible with IBM watsonx Orchestrate.
 This enables you to register and use your local BeeAI agents as external agents within IBM watsonx Orchestrate.
