--- a/docs/integrations/agent-stack.mdx
+++ b/docs/integrations/agent-stack.mdx
@@ -365,7 +365,7 @@ It does so by leveraging the [Citation Extension](https://docs.beeai.dev/build-a
 	    ) from e
 	
 	
-	class PlatformCitationMiddleware(RunMiddlewareProtocol):
+	class CitationMiddleware(RunMiddlewareProtocol):
 	    def __init__(self) -> None:
 	        self._context: AgentStackContext | None = None
 	
@@ -414,7 +414,7 @@ It does so by leveraging the [Citation Extension](https://docs.beeai.dev/build-a
 	        description="Search for information based on a given phrase.",
 	        middlewares=[
 	            GlobalTrajectoryMiddleware(),
-	            PlatformCitationMiddleware(),
+	            CitationMiddleware(),
 	        ],  # add platform middleware to get citations from the platform
 	    )
 	
