docs: update MCP page, add more examples
Signed-off-by: Tomáš Dvořák <toomas2d@gmail.com>

--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -17,7 +17,7 @@ The MCP (Model Context Protocol), developed by Anthropic, is an open protocol th
 
 MCPTool allows you to consume external tools exposed via MCP protocol.
 
-See the [MCP Tool page](/modules/tools#mcp-tool) for more information.
+See the [MCP Tool page](/modules/tools#mcp) for more information.
 
 <Heading level={2} id="server">MCP Server</Heading>
 
