--- a/docs/modules/tools.mdx
+++ b/docs/modules/tools.mdx
@@ -12,21 +12,19 @@ Tools extend agent capabilities beyond text processing, enabling interaction wit
 Supported in Python and TypeScript.
 </Note>
 
-## Built-in tools
-
 Ready-to-use tools that provide immediate functionality for common agent tasks:
 
 | Tool             | Description                                                                                         |
 | :--------------- |:----------------------------------------------------------------------------------------------------|
-| `DuckDuckGoTool` | Search for data on DuckDuckGo                                                                       |
-| `OpenMeteoTool`  | Retrieve weather information for specific locations and dates                                       |
-| `WikipediaTool`  | Search for data on Wikipedia                                                                        |
-| `VectorStoreSearchTool` | Search for relevant documents in a vector store using semantic similarity                         |
-| `MCPTool`        | Discover and use tools exposed by arbitrary [MCP Server](https://modelcontextprotocol.io/examples)  |
-| `PythonTool`     | Run arbitrary Python code in a sandboxed environment                                                |
-| `SandboxTool`    | Run custom Python functions in a sandboxed environment                                              |
-| `ThinkTool`    | Gives an agent a place to think.                                                                                              |
-| `HandoffTool`    | Delegates a task to an expert agent                                                                                             |
+| [MCP](#mcp)        | Discover and use tools exposed by arbitrary [MCP Server](https://modelcontextprotocol.io/examples)  |
+| [Think](#think)    | Gives an agent a place to think                                                                                              |
+| [Handoff](#handoff)    | Delegates a task to an expert agent                                                                                             |
+| [OpenMeteo](#openmeteo)  | Retrieve weather information for specific locations and dates                                       |
+| [DuckDuckGo](#duckduckgo) | Search for data on DuckDuckGo                                                                       |
+| [Wikipedia](#wikipedia)  | Search for data on Wikipedia                                                                        |
+| [VectorStoreSearch](#vector-store-search) | Search for relevant documents in a vector store using semantic similarity                         |
+| [Python](#python)     | Run arbitrary Python code in a sandboxed environment                                                |
+| [Sandbox](#sandbox)    | Run custom Python functions in a sandboxed environment                                              |
 
 ➕ [Request additional built-in tools](https://github.com/i-am-bee/beeai-framework/discussions)
 
@@ -194,7 +192,7 @@ const agent = new ReActAgent({
 
 </CodeGroup>
 
-### Using the tool decorator in Python
+<Heading level={3} id="tool-decorator">Creating a tool</Heading>
 
 For simpler tools, you can use the `tool` decorator to quickly create a tool from a function:
 
@@ -269,9 +267,9 @@ if __name__ == "__main__":
 
 ```
 
-## Built-in tool examples
+## Built-in Tools
 
-### DuckDuckGo search tool
+<Heading level={3} id="duckduckgo" name="duckduckgo">DuckDuckGo search tool</Heading>
 
 Use the DuckDuckGo search tool to retrieve real-time search results from across the internet, including news, current events, or content from specific websites or domains.
 
@@ -348,7 +346,7 @@ console.info(response);
 
 </CodeGroup>
 
-### OpenMeteo weather tool
+<Heading level={3} id="openmeteo">OpenMeteo weather tool</Heading>
 
 Use the OpenMeteo tool to retrieve real-time weather forecasts including detailed information on temperature, wind speed, and precipitation. Access forecasts predicting weather up to 16 days in the future and archived forecasts for weather up to 30 days in the past. Ideal for obtaining up-to-date weather predictions and recent historical weather trends.
 
@@ -401,7 +399,7 @@ console.log(result.getTextContent());
 ```
 </CodeGroup>
 
-### Wikipedia tool
+<Heading level={3} id="wikipedia">Wikipedia tool</Heading>
 
 Use the Wikipedia tool to retrieve detailed information from Wikipedia.org on a wide range of topics, including famous individuals, locations, organizations, and historical events. Ideal for obtaining comprehensive overviews or specific details on well-documented subjects. May not be suitable for lesser-known or more recent topics. The information is subject to community edits which can be inaccurate.
 
@@ -483,7 +481,7 @@ console.info(response);
 ```
 </CodeGroup>
 
-### Vector store search tool
+<Heading level={3} id="vector-store-search">Vector Store Search Tool</Heading>
 
 Use the VectorStoreSearchTool to perform semantic search against pre-populated vector stores. This tool enables agents to retrieve relevant documents from knowledge bases using semantic similarity, making it ideal for RAG (Retrieval-Augmented Generation) applications and knowledge-based question answering.
 
@@ -613,108 +611,202 @@ if __name__ == "__main__":
 
 ```
 
-### MCP tool
+<Heading level={3} id="mcp">MCP Tool</Heading>
 
 Leverage the Model Context Protocol (MCP) to define, initialize, and utilize tools on compatible MCP servers. These servers expose executable functionalities, enabling AI models to perform tasks such as computations, API calls, or system operations.
 
+
+<AccordionGroup>
+	<Accordion title="Using stdio transport">
+
+		<CodeGroup>
+
+		{/* <!-- embedme python/examples/tools/mcp/mcp_stdio.py --> */}
+		```py Python
+		import asyncio
+		import os
+		
+		from mcp import StdioServerParameters, stdio_client
+		
+		from beeai_framework.agents.requirement import RequirementAgent
+		from beeai_framework.backend import ChatModel
+		from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
+		from beeai_framework.tools import Tool
+		from beeai_framework.tools.mcp import MCPTool
+		
+		server_params = StdioServerParameters(
+		    command="npx", args=["-y", "@modelcontextprotocol/server-filesystem", os.getcwd()]
+		)
+		
+		
+		async def main() -> None:
+		    """Using a local MCP file server to explore the file system."""
+		
+		    client = stdio_client(server_params)
+		    mcp_tools = await MCPTool.from_client(client)
+		
+		    agent = RequirementAgent(
+		        llm=ChatModel.from_name("ollama:granite4:micro"),
+		        tools=mcp_tools,
+		        middlewares=[GlobalTrajectoryMiddleware(included=[Tool, ChatModel])],
+		    )
+		
+		    prompt = "What's the current working directory?"
+		    print(f"User: {prompt}")
+		    response = await agent.run(prompt)
+		    print(f"Agent: {response.last_message.text}")
+		
+		
+		if __name__ == "__main__":
+		    asyncio.run(main())
+		
+		```
+
+		{/* <!-- embedme typescript/examples/tools/mcp.ts --> */}
+		```ts TypeScript
+		import { Client } from "@modelcontextprotocol/sdk/client/index.js";
+		import { MCPTool } from "beeai-framework/tools/mcp";
+		import { StdioClientTransport } from "@modelcontextprotocol/sdk/client/stdio.js";
+		import { ReActAgent } from "beeai-framework/agents/react/agent";
+		import { UnconstrainedMemory } from "beeai-framework/memory/unconstrainedMemory";
+		import { OllamaChatModel } from "beeai-framework/adapters/ollama/backend/chat";
+		
+		// Create MCP Client
+		const client = new Client(
+		  {
+		    name: "test-client",
+		    version: "1.0.0",
+		  },
+		  {
+		    capabilities: {},
+		  },
+		);
+		
+		// Connect the client to any MCP server with tools capablity
+		await client.connect(
+		  new StdioClientTransport({
+		    command: "npx",
+		    args: ["-y", "@modelcontextprotocol/server-everything"],
+		  }),
+		);
+		
+		try {
+		  // Server usually supports several tools, use the factory for automatic discovery
+		  const tools = await MCPTool.fromClient(client);
+		  const agent = new ReActAgent({
+		    llm: new OllamaChatModel("llama3.1"),
+		    memory: new UnconstrainedMemory(),
+		    tools,
+		  });
+		  // @modelcontextprotocol/server-everything contains "add" tool
+		  await agent.run({ prompt: "Find out how much is 4 + 7" }).observe((emitter) => {
+		    emitter.on("update", async ({ data, update, meta }) => {
+		      console.log(`Agent (${update.key}) 🤖 : `, update.value);
+		    });
+		  });
+		} finally {
+		  // Close the MCP connection
+		  await client.close();
+		}
+		
+		```
+		</CodeGroup>
+
+	</Accordion>
+
+	<Accordion title="Using streamable-http transport">
+		{/* <!-- embedme python/examples/tools/mcp/mcp_streamable_http.py --> */}
+		```py
+		import asyncio
+		
+		from mcp.client.streamable_http import streamablehttp_client
+		
+		from beeai_framework.agents.requirement import RequirementAgent
+		from beeai_framework.backend import ChatModel
+		from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
+		from beeai_framework.tools import Tool
+		from beeai_framework.tools.mcp import MCPTool
+		
+		
+		async def main() -> None:
+		    """Using BeeAI Framework Documentation MCP Server to learn more."""
+		
+		    client = streamablehttp_client("https://framework.beeai.dev/mcp")
+		    all_tools = await MCPTool.from_client(client)
+		
+		    agent = RequirementAgent(
+		        llm=ChatModel.from_name("ollama:granite4:micro"),
+		        tools=all_tools,
+		        middlewares=[GlobalTrajectoryMiddleware(included=[Tool, ChatModel])],
+		    )
+		
+		    prompt = "Why to use Requirement Agent?"
+		    print(f"User: {prompt}")
+		    response = await agent.run(prompt)
+		    print(f"Agent: {response.last_message.text}")
+		
+		
+		if __name__ == "__main__":
+		    asyncio.run(main())
+		
+		```
+	</Accordion>
+
+	<Accordion title="Using sse transport">
+		{/* <!-- embedme python/examples/tools/mcp/mcp_sse.py --> */}
+		```py Python
+		import asyncio
+		
+		from mcp.client.sse import sse_client
+		
+		from beeai_framework.agents.requirement import RequirementAgent
+		from beeai_framework.backend import ChatModel
+		from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
+		from beeai_framework.tools import Tool
+		from beeai_framework.tools.mcp import MCPTool
+		
+		
+		async def main() -> None:
+		    """Using IBM Cloud MCP Server with BeeAI Framework.
+		
+		    ibmcloud login -r us-south --sso
+		    ibmcloud --mcp-transport http://127.0.0.1:7777
+		    """
+		
+		    all_ibm_tools = await MCPTool.from_client(sse_client("http://127.0.0.1:7777/sse"))
+		    ibm_tools = [tool for tool in all_ibm_tools if tool.name in {"ibmcloud_account_show"}]
+		
+		    agent = RequirementAgent(
+		        llm=ChatModel.from_name("ollama:granite3.3:8b"),
+		        tools=[*ibm_tools],
+		        instructions="Specify JSON as an output format for the tool calls if possible.",
+		        middlewares=[GlobalTrajectoryMiddleware(included=[Tool, ChatModel])],
+		    )
+		
+		    prompt = "Who is the owner of my IBM account?"
+		    print(f"User: {prompt}")
+		    response = await agent.run(prompt)
+		    print(f"Agent: {response.last_message.text}")
+		
+		
+		if __name__ == "__main__":
+		    asyncio.run(main())
+		
+		```
+	</Accordion>
+
+</AccordionGroup>
+
+
 <Tip>
-Check out the [MCP Slack integration tutorial](/guides/mcp-slackbot)
+	Check out the [MCP Slack integration tutorial](/guides/mcp-slackbot)
 </Tip>
 
-<CodeGroup>
+<Note>
+	Currently, the client does not support Roots, Sampling, or Elicitation. Feel free to open a GitHub issue if needed.
+</Note>
 
-{/* <!-- embedme python/examples/tools/mcp_tool_creation.py --> */}
-```py Python [expandable]
-import asyncio
-import os
-
-from dotenv import load_dotenv
-from mcp import StdioServerParameters
-from mcp.client.stdio import stdio_client
-
-from beeai_framework.tools.mcp import MCPTool
-
-load_dotenv()
-
-# Create server parameters for stdio connection
-server_params = StdioServerParameters(
-    command="npx",
-    args=["-y", "@modelcontextprotocol/server-slack"],
-    env={
-        "SLACK_BOT_TOKEN": os.environ["SLACK_BOT_TOKEN"],
-        "SLACK_TEAM_ID": os.environ["SLACK_TEAM_ID"],
-        "PATH": os.getenv("PATH", default=""),
-    },
-)
-
-
-async def slack_post_message_tool() -> MCPTool:
-    slack_tools = await MCPTool.from_client(stdio_client(server_params))
-    return next(filter(lambda tool: tool.name == "slack_post_message", slack_tools))
-
-
-async def main() -> None:
-    tool = await slack_post_message_tool()
-    print(tool.name, tool.description)
-
-
-if __name__ == "__main__":
-    asyncio.run(main())
-
-```
-
-{/* <!-- embedme typescript/examples/tools/mcp.ts --> */}
-```ts TypeScript [expandable]
-import { Client } from "@modelcontextprotocol/sdk/client/index.js";
-import { MCPTool } from "beeai-framework/tools/mcp";
-import { StdioClientTransport } from "@modelcontextprotocol/sdk/client/stdio.js";
-import { ReActAgent } from "beeai-framework/agents/react/agent";
-import { UnconstrainedMemory } from "beeai-framework/memory/unconstrainedMemory";
-import { OllamaChatModel } from "beeai-framework/adapters/ollama/backend/chat";
-
-// Create MCP Client
-const client = new Client(
-  {
-    name: "test-client",
-    version: "1.0.0",
-  },
-  {
-    capabilities: {},
-  },
-);
-
-// Connect the client to any MCP server with tools capablity
-await client.connect(
-  new StdioClientTransport({
-    command: "npx",
-    args: ["-y", "@modelcontextprotocol/server-everything"],
-  }),
-);
-
-try {
-  // Server usually supports several tools, use the factory for automatic discovery
-  const tools = await MCPTool.fromClient(client);
-  const agent = new ReActAgent({
-    llm: new OllamaChatModel("llama3.1"),
-    memory: new UnconstrainedMemory(),
-    tools,
-  });
-  // @modelcontextprotocol/server-everything contains "add" tool
-  await agent.run({ prompt: "Find out how much is 4 + 7" }).observe((emitter) => {
-    emitter.on("update", async ({ data, update, meta }) => {
-      console.log(`Agent (${update.key}) 🤖 : `, update.value);
-    });
-  });
-} finally {
-  // Close the MCP connection
-  await client.close();
-}
-
-```
-
-</CodeGroup>
-
-### Python tool
+<Heading level={3} id="python">Python Tool</Heading>
 
 The Python tool allows AI agents to execute Python code within a secure, sandboxed environment. This tool enables access to files that are either provided by the user or created during execution.
 
@@ -834,7 +926,7 @@ def get_riddle() -> Optional[Dict[str, str]]:
 
 </CodeGroup>
 
-### Sandbox tool
+<Heading level={3} id="sandbox">Sandbox tool</Heading>
 
 The Sandbox tool provides a way to define and run custom Python functions in a secure, sandboxed environment. It's ideal when you need to encapsulate specific functionality that can be called by the agent.
 
